null ptr fix